2002-01-17  Mark Mitchell  <mark@codesourcery.com>

	* GNUmakefile.in (SCRIPTS): Add $(SCRIPT_EXT).

2002-01-16  Mark Mitchell  <mark@codesourcery.com>

	* qm/structured_text.py: Substantial changes to support a verbatim
	markup.
	* qm/test/result.py (Result.AsStructuredText): Remove.
	* qm/test/text_result_stream.py (TextResultStream._DisplayResult): 
	Do not use it.
	* qm/test/classes/command.py (ExecTestBase): Change name of
	"Expected Standard Error" field to "Standard Error".
	(ExecTestBase.RunProgram): Use verbatim formatting for output
	and standard error annotations.
	* qm/test/doc/tour.xml: Update accordingly.
	* qm/test/share/dtml/result.dtml: Adjust formatting.
	* qm/test/web/web.py (TestResultsPage.FormatResult): Remove.
	(QMTestServer.HandleSaveResults): Fix typos.
	
2002-01-15  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/xmldb.py (Database.WriteSuite): Fix typo.
	* qm/test/classes/command.py (_make_result_for_exception): Remove.
	(ExecTestBase.RunProgram): Use execvpe, not execve.
	* qm/test/web/web.py (qm.test.suite): Import it.
	(QMTestServer.HandleCreateSuite): Pass the server, not the 
	test database, to ShowSuitePage.
	(QMTestServer.HandleShowSuite): Likewise.
	(QMTestServer.HandleSubmitSuite): Use Suite, not qm.test.base.Suite.

	* qm.spec.in (Release): Reset to zero.

	* scripts/qm-release (build_source): Change destination for
	PDF manual.

	* configure.in (QM_MINOR_VER): Increment.
	* configure: Regenerated.

	* scripts/qm-release (build_source): Correct copying of PDF
	documentation.

	* scripts/qm-release (build_source): Correct documentation 
	building.

	* GNUmakefile.in (lib-install): Correct installation location
	of classes.qmc.
	* qm/web.py (WebServer.handle_error): New method.

2002-01-07  Mark Mitchell  <mark@codesourcery.com>

	* configure.in: Do not build gadfly if it does not exist.

	* scripts/qm-release (build_source): Remove QMTrack from
	the release tarball.

	* NEWS: New file.
	
	* qm/queue.py: New file.