@@ -1,5 +1,9 @@
 2002-01-17  Mark Mitchell  <mark@codesourcery.com>
 
+	* configure.in: Issue an error if distutils is not installed.
+	* configure: Regenerated.
+	* qm/test/doc/tour.xml: Update output display.	
+
 	* GNUmakefile.in (SCRIPTS): Add $(SCRIPT_EXT).
 
 2002-01-16  Mark Mitchell  <mark@codesourcery.com>
